--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=android
+server.port=1000
+spring.datasource.url=jdbc:postgresql://rain.db.elephantsql.com:5432/mrtakymu
+spring.datasource.username=mrtakymu
+spring.datasource.password=bAkmoAqVdpbe59MNQPMp6q5h-rVGve9_
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
