--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=android
-server.port=1000
+server.port=8080
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://rain.db.elephantsql.com:5432/mrtakymu
 spring.datasource.username=mrtakymu
 spring.datasource.password=bAkmoAqVdpbe59MNQPMp6q5h-rVGve9_
