Doi db sang local

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 spring.application.name=android
-server.port=8080
+server.port=8082
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://rain.db.elephantsql.com:5432/mrtakymu
-spring.datasource.username=mrtakymu
-spring.datasource.password=bAkmoAqVdpbe59MNQPMp6q5h-rVGve9_
+spring.datasource.url=jdbc:postgresql://rain.db.elephantsql.com:5432/cmwmwnje
+spring.datasource.username=cmwmwnje
+spring.datasource.password=Go3dA9a-HYpIDaQaJmU8-B9hgKRMvbAu
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/android
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#spring.jpa.generate-ddl = true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.format_sql=true
