--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=android
 server.port=8082
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://rain.db.elephantsql.com:5432/cmwmwnje
-spring.datasource.username=cmwmwnje
-spring.datasource.password=Go3dA9a-HYpIDaQaJmU8-B9hgKRMvbAu
+#spring.datasource.url=jdbc:postgresql://rain.db.elephantsql.com:5432/cmwmwnje
+#spring.datasource.username=cmwmwnje
+#spring.datasource.password=Go3dA9a-HYpIDaQaJmU8-B9hgKRMvbAu
+
+spring.datasource.url=jdbc:postgresql://rain.db.elephantsql.com:5432/uwmzaxww
+spring.datasource.username=uwmzaxww
+spring.datasource.password=ITpvvWmUqzwv6wP26Mm2lq3d7NlDSInC
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/android
 #spring.datasource.username=root
